sprint boot整合elastic-job

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>elastic-file-dispatch</module>
       <module>elastic-db-file-dispatch</module>
+      <module>simple-time-task</module>
   </modules>
   <parent>
     <groupId>org.springframework.boot</groupId>
